--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, "Top") %>
 <div class="center jumbotron">
   <h1>勤怠管理システム</h1>
-  <p>このアプリケーションでは、登録されたユーザーの勤怠情報を閲覧・登録・編集することができます。</p>
   <%= link_to "ログイン", signup_path, class: "btn btn-lg btn-primary" %>
+  <p>アカウント作成は<%= link_to "こちら", class: "btn primary" %>から</p>
 </div>
+  
