--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,8 +10,8 @@
               アカウント<b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Show", current_user %></li>
-              <li><%= link_to "Settings", '#' %></li>
+              <li><%= link_to "プロフィール", current_user %></li>
+              <li><%= link_to "設定",  edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                <%= link_to "ログアウト", logout_path, method: :delete %>
