--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,20 +2,26 @@
 <div>
   <table class="table table-bordered table-condensed user-table">
     <tr>
-      <td>時間管理表</td>
+      <td>
+          <%= link_to "⇦ ", user_path(date: @first_day.prev_month), class: "btn btn-info" %>
+        【<%= l(@first_day, format: :middle) %>】時間管理表
+          <%= link_to " ⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
+      </td>
       <td>指定勤務時間：<%= format_basic_info(@user.work_time) %></td>
       <td>基本時間：<%= format_basic_info(@user.basic_time) %></td>
-      <td>初日</td>
+      <td>初日：<%= l(@first_day, format: :short) %></td>
     </tr>
 
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
       <td>名前：<%= @user.name %></td>
       <td>出勤日数</td>
-      <td>締め</td>
+      <td>締め：<%= l(@last_day, format: :short) %></td>
     </tr>
   </table>
 </div>
+
+
 
 <div>
   <table class="table table-bordered table-condensed table-hover" id="table-attendances">
@@ -32,10 +38,10 @@
     </thead>
 
     <tbody>
-      <% (@first_day..@last_day).each do |day| %>
+      <% @attendances.each do |day| %>
         <tr>
-          <td><%= day %></td>
-          <td></td>
+          <td><%= l(day.worked_on, format: :short) %></td>
+          <td><%= $days_of_the_week[day.worked_on.wday] %></td>
           <td></td>
           <td></td>
           <td></td>
