--- a/app/views/attendances/edit_one_month.html.erb
+++ b/app/views/attendances/edit_one_month.html.erb
@@ -7,10 +7,12 @@
       <tr>
         <th>日付</th>
         <th>曜日</th>
-        <th>出勤時間</th>
-        <th>退勤時間</th>
+        <th>出社</th>
+        <th>退社</th>
         <th>在社時間</th>
         <th>備考</th>
+        <th>残業表示</th>
+        <th>指示者</th>
       </tr>
     </thead>
     <tbody>
@@ -19,7 +21,7 @@
         <tr>
           <td><%= l(day.worked_on, format: :short) %></td>
           <td><%= $days_of_the_week[day.worked_on.wday] %></td>
-          <% if !current_user.admin? && (Date.current < day.worked_on) %>
+          <% if logged_in? && (Date.current < day.worked_on) %>
             <td><%= attendance.time_field :started_at, readonly: true, class: "form-control" %></td>
             <td><%= attendance.time_field :finished_at, readonly: true, class: "form-control" %></td>
           <% else %>
@@ -32,6 +34,8 @@
             <% end %>
           </td>
           <td><%= attendance.text_field :note, class: "form-control" %></td>
+          <td><%= attendance.text_field :note, class: "form-control" %></td>
+          <td><%= attendance.text_field :note, class: "form-control" %></td>
         </tr>
         <% end %>
       <% end %>
@@ -40,7 +44,7 @@
 </div>
 
 <div class="center">
-  <%= f.submit "編集を保存する", class: "btn btn-lg btn-primary" %>    
   <%= link_to "キャンセル", user_path(date: @first_day), class: "btn btn-lg btn-default" %>
+  <%= f.submit "編集を保存する", class: "btn btn-lg btn-default" %>
 </div>
 <% end %>
