--- a/app/views/users/edit_basic_info.html.erb
+++ b/app/views/users/edit_basic_info.html.erb
@@ -1,1 +1,21 @@
+<% provide(:title, '基本情報の修正') %>
+
 <h1>基本情報の修正</h1>
+<div class= "row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_with(model: @user, url: update_basic_info_user_path(@user), local: true, method: :patch) do |f| %>
+    <%= render 'shared/error_messages', object: @user %>
+    
+    <%= f.label :basic_time, class: "label-user" %>
+    <%= f.text_field :basic_time, class: "form-control" %>
+
+    <%= f.label :work_time, class: "label-user" %>
+    <%= f.email_field :work_time, class: "form-control" %>
+    
+    <%= f.submit "編集", class: "btn btn-primary btn-block btn-user" %>
+    
+    <% end %>
+
+    
+  </div> 
+</div>
