指定、基本時間の更新

--- a/app/views/users/edit_basic_info.html.erb
+++ b/app/views/users/edit_basic_info.html.erb
@@ -6,16 +6,17 @@
     <%= form_with(model: @user, url: update_basic_info_user_path(@user), local: true, method: :patch) do |f| %>
     <%= render 'shared/error_messages', object: @user %>
     
-    <%= f.label :basic_time, class: "label-user" %>
-    <%= f.text_field :basic_time, class: "form-control" %>
+    <%= f.label :basic_time, class: "label-#{yield(:class_text)}" %>
+    <%= f.time_field :basic_time, class: "form-control" %>
 
-    <%= f.label :work_time, class: "label-user" %>
-    <%= f.email_field :work_time, class: "form-control" %>
-    
-    <%= f.submit "編集", class: "btn btn-primary btn-block btn-user" %>
-    
+    <%= f.label :work_time, class: "label-#{yield(:class_text)}" %>
+    <%= f.time_field :work_time, class: "form-control" %>
+
+    <div class="center">
+      <%= f.submit :編集, class: "btn btn-primary btn-#{yield(:class_text)}" %>
+      
     <% end %>
-
-    
   </div> 
 </div>
+
+    
