--- a/app/views/users/edit_basic_info.html.erb
+++ b/app/views/users/edit_basic_info.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, '基本情報の修正') %>
+<% provide(:title, '基本情報の更新') %>
 
-<h1>基本情報の修正</h1>
+<h1>基本情報の更新</h1>
 <div class= "row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_with(model: @user, url: update_basic_info_user_path(@user), local: true, method: :patch) do |f| %>
@@ -14,9 +14,9 @@
 
     <div class="center">
       <%= f.submit :編集, class: "btn btn-primary btn-#{yield(:class_text)}" %>
-      
     <% end %>
   </div> 
 </div>
 
     
+      
