--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,11 +19,11 @@
       <tr>
         <td><%= link_to user.name, user %></td>
          <td class="center"><%= user.department.present? ? user.department : "未所属" %></td>
-        <td class="center"><%= format_basic_info(user.basic_time) %></td></td>
+        <td class="center"><%= format_basic_info(user.basic_time) %></td>
         <td class="center"><%= format_basic_info(user.work_time) %></td>
         <td>
           <% if current_user.admin? && !current_user?(user) %>
-            <%= link_to "基本情報編集",  edit_basic_info_user_path(user), remote: true, class: "btn btn-success" %>          
+            <%= link_to "基本の更新", edit_basic_info_user_path(user), remote: false, class: "btn btn-success" %>          
             <%= link_to "削除", user, method: :delete,
                 data: { confirm: "削除してよろしいですか？" },
                 class: "btn btn-danger" %>
@@ -34,3 +34,5 @@
   </table>
   <%= will_paginate %>
 </div>
+
+<div id="edit-basic-info" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
