--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,12 @@
 <% provide(:title, 'All Users') %>
 <h1>ユーザー一覧</h1>
+<p>検索</p>
+
+
+<%= form_tag(users_path, :method => 'get' ) do %>
+  <%= text_field_tag :search %>
+  <%= submit_tag 'Search', :name => nil %>
+<% end %>
 
 <div class="col-md-10 col-md-offset-1">
   <%= will_paginate %>
@@ -18,7 +25,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.name, user %></td>
-         <td class="center"><%= user.department.present? ? user.department : "未所属" %></td>
+        <td class="center"><%= user.department.present? ? user.department : "未所属" %></td>
         <td class="center"><%= format_basic_info(user.basic_time) %></td>
         <td class="center"><%= format_basic_info(user.work_time) %></td>
         <td>
