残業申請モーダル一般とりあえず終了！

--- a/app/views/attendances/_edit_overwork_request.html.erb
+++ b/app/views/attendances/_edit_overwork_request.html.erb
@@ -10,37 +10,40 @@
       <h1 class="modal-title">残業申請</h1>
     </div>
     <div class="modal-body">
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <%= form_with(model: @user, url: update_overwork_request_user_attendance_path(@user, @attendance), local: true, method: :patch) do |f| %>
-            <table class="table table-bordered table-condensed table-hover" id="table-attendances">
-              <thead>
-                <tr>
-                  <th>日付</th>
-                  <th>曜日</th>
-                  <th>終了予定時間</th>
-                  <th>翌日</th>
-                  <th>業務処理内容</th>
-                  <th>指導者管理内容</th>
-                </tr>
-              </thead>
-              
-              <tbody>
-                
-                  <tr>
-                    <td><%= l(@attendance.worked_on, format: :short) %></td>
-                    <td></td>
-                    <td><%= f.time_field :plan_finished_at, class: "form-control" %></td> 
-                    <td><%= f.check_box :tomorrow,{}, "true", "false" %> </td> 
-                    <td><%= f.text_field :business_processing_contents, class: "form-control" %></td> 
-                    <td><%= f.select :instructor_confirmation,[["選択してください"],["上長A"],["上長B"]]%></td> 
-                  </tr>
-              </tbody>
-            </table>
-            <%= f.submit "残業申請", class: "btn btn-primary" %>
-          <% end %>
-        </div>
-      </div> 
+      <%= form_with(model: @user, url: update_overwork_request_user_attendance_path(@user, @attendance), local: true, method: :patch) do |f| %>
+        <table class="table table-bordered table-hover" id="table-attendances">
+          <thead>
+            <tr>
+              <th>日付</th>
+              <th>曜日</th>
+              <th>終了予定時間</th>
+              <th>翌日</th>
+              <th>業務処理内容</th>
+              <th>指導者管理内容</th>
+            </tr>
+          </thead>
+          
+          <tbody>
+            <% css_class = 
+            case %w{日 月 火 水 木 金 土}[@attendance.worked_on.wday]
+            when '土'
+              'text-primary'
+            when '日'
+              'text-danger'
+            end %>
+            
+            <tr>
+              <td><%= l(@attendance.worked_on, format: :short) %></td>
+              <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[@attendance.worked_on.wday] %></td>
+              <td><%= f.time_field :plan_finished_at, class: "form-control" %></td>  
+              <td><%= f.check_box :tomorrow,{}, "true", "false"  %> </td> 
+              <td><%= f.text_field :business_processing_contents, class: "form-control" %></td> 
+              <td><%= f.select :instructor_confirmation,[["選択してください"],["上長A"],["上長B"]] %></td> 
+            </tr>
+          </tbody>
+        </table>
+        <%= f.submit "残業申請", class: "btn btn-primary" %>
+      <% end %>
     </div>
   </div>
 </div>
