--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,9 @@
         【<%= l(@first_day, format: :middle) %>】時間管理表
           <%= link_to " ⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
       </td>
-      <td>指定勤務時間：<%= format_basic_info(@user.work_time) %></td>
+      <td>指定勤務開始時間：<%= format_basic_info(@user.work_time) %>
+      <br>指定勤務終了時間:<%= format_basic_info(@user.basic_time) %></br>
+      </td>
       <td>基本時間：<%= format_basic_info(@user.basic_time) %></td>
       <td>初日：<%= l(@first_day, format: :short) %></td>
     </tr>
@@ -23,23 +25,41 @@
 <div class="btn-users-show">
 <%= link_to "勤怠を編集", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
 <%= link_to "CSV出力", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
-<%= link_to "勤怠修正ログ（承認済）", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
+<br><%= link_to "勤怠修正ログ（承認済）", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %></br>
 </div>
 
 <div>
   <table class="table table-bordered table-condensed table-hover" id="table-attendances">
-    <thead>
+    <tr>
+        <th rowspan="2"></th>
+        <th rowspan = "3">日付</th>
+        <th rowspan = "3">曜日</th>
+        <th colspan="8">【実績】</th>
+        <th colspan="5">所定外勤務</th>
+      </tr>
+      <tr>
+        <th colspan="3">出社</th>
+        <th colspan="3">退社</th>
+        <th rowspan="2">在社時間</th>
+        <th rowspan="2">備考</th>
+        <th colspan="2">終了予定時間</th>
+        <th rowspan="2">時間外処理</th>
+        <th rowspan="2">業務処理内容</th>
+        <th rowspan="2">指示者確認</th>
+      </tr>
       <tr>
         <th>残業申請</th>
-        <th>日付</th>
-        <th>曜日</th>
-        <th>勤怠登録</th>
-        <th>出勤時間</th>
-        <th>退勤時間</th>
-        <th>在社時間</th>
-        <th>備考</th>
+        <th>時</th>
+        <th>分</th>
+        <th></th>
+        <th>時</th>
+        <th>分</th>
+        <th></th>
+        <th>時</th>
+        <th>分</th>
       </tr>
     </thead>
+
 
     <tbody>
       <% @attendances.each do |day| %>
