--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,16 +7,18 @@
         【<%= l(@first_day, format: :middle) %>】時間管理表
           <%= link_to " ⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
       </td>
-      <td>指定勤務開始時間：<%= format_basic_info(@user.work_time) %>
-      <br>指定勤務終了時間:<%= format_basic_info(@user.basic_time) %></br>
+      <td>指定勤務開始時間: <%= format_basic_info(@user.work_time) %>
+      <br>指定勤務終了時間: <%= format_basic_info(@user.work_time) %></br>
       </td>
-      <td>基本時間：<%= format_basic_info(@user.basic_time) %></td>
+      <td colspan=3>基本時間：<%= format_basic_info(@user.basic_time) %></td>
       <td>初日：<%= l(@first_day, format: :short) %></td>
     </tr>
 
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
       <td>名前：<%= @user.name %></td>
+      <td>コード</td>
+      <td></td>
       <td>出勤日数：<%= @worked_sum %>日</td>
       <td>締め：<%= l(@last_day, format: :short) %></td>
     </tr>
@@ -62,52 +64,68 @@
 
 
     <tbody>
-      <% @attendances.each do |day| %>
-      <% css_class = 
-        case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
-        when '土'
-          'text-primary'
-        when '日'
-          'text-danger'
-        end %>
-        <tr>
-          <td><%= link_to "残業申請", edit_overwork_request_user_attendance_path(@user, day), remote: true, class: "btn btn-primary" %></td>
-          <td><%= l(day.worked_on, format: :short) %></td>
-          <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
-          <td>
-            <% if btn_text = attendance_state(day) %>
-              <%= link_to "#{btn_text}", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
-            <% end %>
+        <% @attendances.each do |day| %>
+        <% css_class = 
+          case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
+          when '土'
+            'text-primary'
+          when '日'
+            'text-danger'
+          end %>
+          <tr>
+            <td><%= link_to "残業申請", edit_overwork_request_user_attendance_path(@user, day), remote: true, class: "btn btn-primary" %></td>
+            <td><%= l(day.worked_on, format: :short) %></td>
+            <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+            <td>
+              <% if btn_text = attendance_state(day) %>
+                <%= link_to "#{btn_text}", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
+              <% end %>
+            </td>
+            </td>
+            <td><%= day.started_at.strftime('%-H') if day.started_at.present? %></td>
+            <td><%= day.started_at.floor_to(15.minutes).strftime('%M') if day.started_at.present? %></td>
+            <td>
+              <% if (Date.current == day.worked_on) && day.started_at.nil? %>
+                <%= link_to "出社", user_attendance_system_path(@user, day), method: :patch, class: "btn btn-default btn-dark form-control" %>
+              <% end %>  
+            </td>
+            <td><%= day.finished_at.strftime('%-H') if day.finished_at.present? %></td>
+            <td><%= day.finished_at.floor_to(15.minutes).strftime('%M') if day.finished_at.present? %></td>
+            </td>
+            <td>
+              <% if (Date.current == day.worked_on) && day.started_at.present? && day.finished_at.nil? %>
+                <%= link_to "退社", user_attendance_path(@user, day), method: :patch, class: "btn btn-default btn-dark form-control" %>
+              <% end %>  
+            </td>
+            <td>
+              <% if day.started_at.present? && day.finished_at.present? %>
+                <%= str_times = working_times(day.started_at.floor_to(15.minutes), day.finished_at.floor_to(15.minutes)) %>
+                <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
+              <% end %>     
+            </td>
+            <td><%= day.note %></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        <% end %>
+      </tbody>
+      <tfoot>
+         <tr>
+          <td></td>
+          <td colspan = "2"><%= format_basic_info(@user.basic_time).to_f*@worked_sum %></td>
+          <td colspan = "6"></td>
+          <td><%= format("%.2f", @total_working_times.to_f) %></td>
+          <td colspan="5"></td>
+          <td>所属長承認&emsp;<br>
           </td>
-          <td><%= l(day.started_at.round_to(15.minutes), format: :time) if day.started_at.present? %></td>
-          <td><%= l(day.finished_at.round_to(15.minutes), format: :time) if day.finished_at.present? %></td>
-          <td>
-            <% if day.started_at.present? && day.finished_at.present? %>
-              <%= str_times = working_times(day.started_at.round_to(15.minutes), day.finished_at.round_to(15.minutes)) %>
-              <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
-            <% end %>
-          </td>
-          <td><%= day.note %></td>
         </tr>
-      <% end %>
-    </tbody>
+      </tfoot>
+    </table>
+  </div>
+  <div id="edit-overwork-request" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
     
-     <tfoot>
-      <!--rowspan:縦結合、colspan：横結合-->
-      <tr>
-        <td colspan="2">累計日数</td>
-        <td colspan="2">総合勤務時間</td>
-        <td colspan="2">累計在社時間</td>
-        <td rowspan="2"></td>
-      </tr>
-      <tr>
-        <td colspan="2"><%= @attendances.count %></td>
-        <td colspan="2"><%= format_basic_info(@user.work_time).to_f * @worked_sum %></td>
-        <td colspan="2"><%= format("%.2f", @total_working_times.to_f) %></td>
-      </tr>
-    </tfoot>    
-  </table>
-</div>
-<div id="edit-overwork-request" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
  
     
