--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -119,7 +119,7 @@
           <td colspan = "6"></td>
           <td><%= format("%.2f", @total_working_times.to_f) %></td>
           <td colspan="5"></td>
-          <td>所属長承認&emsp;<br>
+          <td>所属長承認&emsp;<br><%= link_to "申請", edit_overwork_request_user_attendance_path(@user), remote: true, class: "btn btn-primary" %></td>
           </td>
         </tr>
       </tfoot>
