ユーザー一覧

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,37 +9,31 @@
 <% end %>
 
 <div class="col-md-10 col-md-offset-1">
-  <%= will_paginate %>
-  <table class="table table-condensed table-hover" id="table-users">
-    <thead>
-      <tr>
-        <th><%= User.human_attribute_name :name %></th>
-        <th><%= User.human_attribute_name :department %></th>
-        <% if current_user.admin? %>
-        <th><%= User.human_attribute_name :basic_time %></th>
-        <th><%= User.human_attribute_name :work_time %></th>
-        <% end %>
-      </tr>
-    </thead>
-
+  
+  
+    <table class="table">
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to user.name, user %></td>
-        <td class="center"><%= user.department.present? ? user.department : "未所属" %></td>
-        <td class="center"><%= format_basic_info(user.basic_time) %></td>
-        <td class="center"><%= format_basic_info(user.work_time) %></td>
         <td>
           <% if current_user.admin? && !current_user?(user) %>
-            <%= link_to "基本の更新", edit_basic_info_user_path(user), remote: false, class: "btn btn-success" %>          
-            <%= link_to "削除", user, method: :delete,
+          <%= user.name %><br>
+          <%= link_to "削除", user, method: :delete,
                 data: { confirm: "削除してよろしいですか？" },
-                class: "btn btn-danger" %>
+                class: "btn btn-primary" %>
+          <br><%= link_to "編集", edit_basic_info_user_path(user), remote: false, class: "btn btn-primary" %>
+        </td>              
           <% end %>
-        </td>
       </tr>
     <% end %>
+    </table>
   </table>
-  <%= will_paginate %>
 </div>
 
 <div id="edit-basic-info" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
+        
+         
+  
+       
+        
+          
+          
