--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
           <%= link_to "削除", user, method: :delete,
                 data: { confirm: "削除してよろしいですか？" },
                 class: "btn btn-primary" %>
-          <br><%= link_to "編集", edit_basic_info_user_path(user), remote: false, class: "btn btn-primary btn-lg" %>
+          <br><%= link_to "編集", user, remote: false, class: "btn btn-primary btn-lg" %>
         </td>              
           <% end %>
       </tr>
