--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,12 +9,28 @@
 
   <%= f.label :department, class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :department, class: "form-control" %>
+  
+  <%= f.label :employee_number, class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :employee_number, class: "form-control" %>
+  
 
+  <%= f.label :uid, class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :uid, class: "form-control" %>
+  
   <%= f.label :password, class: "label-#{yield(:class_text)}" %>
-  <%= f.password_field :password, class: "form-control" %>
-
-  <%= f.label :password_confirmation, class: "label-#{yield(:class_text)}" %>
-  <%= f.password_field :password_confirmation, class: "form-control" %>
+  <%= f.password_field :password, class: 'form-control' %>
+  
+  <%= f.label :basic_time, class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :basic_time, class: "form-control" %>
+  
+  <%= f.label :designated_work_start_time, class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :designated_work_start_time, class: "form-control" %>
+  
+  <%= f.label :designated_work_end_time, class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :designated_work_end_time, class: "form-control" %>
+  
+ 
 
   <%= f.submit yield(:button_text), class: "btn btn-primary btn-block btn-#{yield(:class_text)}" %>
 <% end %>
+  
