--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: @user, local: true) do |f| %>
-  <%= render 'shared/error_messages', object: @user %>
+<%= form_with(model: @user,url: users_path(@user), local: true) do |f| %>
+  <%= render 'shared/error_messages',  object: @user %>
 
   <%= f.label :name, class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :name, class: "form-control" %>
@@ -7,13 +7,12 @@
   <%= f.label :email, class: "label-#{yield(:class_text)}" %>
   <%= f.email_field :email, class: "form-control" %>
 
-  <%= f.label :department, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :department, class: "form-control" %>
+  <%= f.label :affiliation, class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :affiliation, class: "form-control" %>
   
   <%= f.label :employee_number, class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :employee_number, class: "form-control" %>
   
-
   <%= f.label :uid, class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :uid, class: "form-control" %>
   
@@ -33,4 +32,5 @@
 
   <%= f.submit yield(:button_text), class: "btn btn-primary btn-block btn-#{yield(:class_text)}" %>
 <% end %>
+
   
