--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,13 +19,29 @@
             <%= link_to "削除", user, method: :delete,
                   data: { confirm: "削除してよろしいですか？" },
                   class: "btn btn-primary" %>
-            <br><%= link_to "編集", user, remote: false, class: "btn btn-primary btn-lg" %>
-          </td>              
+            <br>
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <button type="button" data-toggle="collapse" data-target="#collapse<%= user.id %>" class="btn btn-primary btn-lg">編集</button>
+                </h4>
+              </div>
+              <div id="collapse<%= user.id %>" class="panel-collapse collapse">
+                <div class="panel-body"><%= render 'user', {user: user} %></div> 
+                </div>
+              </div>
+            </div>
+          </div>  
           <% end %>
+          </td>
         </tr>
       <% end %>
       </table>
   </div>
+
+
+     
     
     
     
