<%= will_paginate %>修正

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,7 @@
   <%= submit_tag "インポート" %>
   <% end %>
   
+  <%= will_paginate %>
   <div class="col-md-10 col-md-offset-1">
     
       <table class="table">
@@ -38,6 +39,7 @@
         </tr>
       <% end %>
       </table>
+      <%= will_paginate %>
   </div>
 
 
