--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,8 @@
         【<%= l(@first_day, format: :middle) %>】時間管理表
           <%= link_to " ⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
       </td>
-      <td>指定勤務開始時間: <%= format_basic_info(@user.work_time) %>
-      <br>指定勤務終了時間: <%= format_basic_info(@user.work_time) %></br>
+      <td>指定勤務開始時間: <%= format_basic_info(@user.designated_work_start_time) %>
+      <br>指定勤務終了時間: <%= format_basic_info(@user.designated_work_end_time) %></br>
       </td>
       <td colspan=3>基本時間：<%= format_basic_info(@user.basic_time) %></td>
       <td>初日：<%= l(@first_day, format: :short) %></td>
@@ -17,7 +17,7 @@
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
       <td>名前：<%= @user.name %></td>
-      <td>コード</td>
+      <td>コード: <%= @user.employee_number %></td>
       <td></td>
       <td>出勤日数：<%= @worked_sum %>日</td>
       <td>締め：<%= l(@last_day, format: :short) %></td>
