--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <% if current_user.admin? %>
           <li><%= link_to "ユーザー覧", users_path %></li>
           <li><%= link_to "出勤社員一覧", working_employee_list_user_path(current_user) %></li>
-          <li><%= link_to "拠点商法修正ページ", users_path %></li>
+          <li><%= link_to "拠点情報修正ページ", base_list_user_path(current_user) %></li>
           <li><%= link_to "基本情報の更新", edit_basic_info_user_path(current_user) %></li>
           <% end %>
           <li class="dropdown">
