--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -13,7 +13,7 @@
           <th>拠点情報</th>
         </tr>
       </thead>
-      
+      <% @offices.each do |office| %>
       <tbody>
         <th></th>
         <th></th>
@@ -21,6 +21,7 @@
         <th></th>
         <th></th>
       </tbody>
+      <% end %>
     </table>
   </div>
 </div>
