--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -1,27 +1,34 @@
 <% provide(:title, '拠点情報一覧') %>
 <h1>拠点情報一覧</h1>
 
-<div class="office">
-  <div class="col-md-10 col-md-officet-1">
-    <table class="table-striped table-bordered table-condensed">
+    <table class="table table-bordered table-codensed user-table">
       <thead>
         <tr>
-          <th></th>
-          <th></th>
-          <th>拠点番号</th>
-          <th>拠点名</th>
-          <th>拠点情報</th>
+          <td></td>
+          <td></td>
+          <td>拠点番号</td>
+          <td>拠点名</td>
+          <td>拠点情報</td>
         </tr>
       </thead>
-      <% @offices.each do |office| %>
+      
       <tbody>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-      </tbody>
+      <% @offices.each do |office| %>
+        <tr>
+        <td><%= link_to "修正",  users_path, remote:true, class: "btn btn-primary" %></td>
+        <% if current_user.admin? %>
+        <td><% link_to"削除", office, method: :delete,
+                  data: { confirm: "削除してよろしいですか？" },
+                  class: "btn btn-primary" %>
+        <% end %>          
+            </td>
+        <td><%= office.office_number %></td>
+        <td><%= office.office_name %></td>
+        <td><%= office.office_modality %></td>
+        </tr>
       <% end %>
+      </tbody>
+          
     </table>
-  </div>
-</div>
+ 
+          
