--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, '拠点情報一覧') %>
 <h1>拠点情報一覧</h1>
 
-     <table class="table table-bordered table-condensed user-table">
+  <table class="table table-bordered table-condensed user-table">
       <thead>
         <tr>
           <td></td>
@@ -14,22 +14,29 @@
       
       <tbody>
         
-      <% @offices.each do |office| %>
+    <% @offices.each do |office| %>
         <tr>
-       
+        <td><%= link_to "編集", edit_office_path(office), class: "btn btn-success" %></td>
         <% if current_user.admin? %>
-        <td><% link_to"削除", office, method: :delete,
+        <td><%= link_to "削除", office_path(office), method: :delete,
                   data: { confirm: "削除してよろしいですか？" },
                   class: "btn btn-primary" %>
-        <% end %>          
             </td>
+        <% end %>          
         <td><%= office.office_number %></td>
         <td><%= office.office_name %></td>
         <td><%= office.office_modality %></td>
         </tr>
-      <% end %>
       </tbody>
+      
+  </table>
+     
+      <%= link_to "拠点情報の追加", office_path(office), class: "btn btn-success" %>
+    <% end %>
+      
           
-    </table>
+    
+   
+   
  
           
