--- a/app/views/offices/edit.html.erb
+++ b/app/views/offices/edit.html.erb
@@ -15,7 +15,7 @@
     <%= f.text_field :office_modality, class: "form-control" %>
     
     
-    <%= f.submit :追加, class: "btn btn-primary btn-block btn-#{yield(:class_text)}" %>
+    <%= f.submit :編集, class: "btn btn-primary btn-block btn-#{yield(:class_text)}" %>
     <% end %>
   </div>
 </div>
