--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -29,10 +29,10 @@
         </tr>
       </tbody>
       
+    <% end %>
   </table>
      
-      <%= link_to "拠点情報の追加", office_path(office), class: "btn btn-success" %>
-    <% end %>
+      <%= link_to "拠点情報の追加", office_path(@offices), class: "btn btn-success" %>
       
           
     
