拠点一覧やっと終了

--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -32,7 +32,7 @@
     <% end %>
   </table>
      
-      <%= link_to "拠点情報の追加", office_path(@offices), class: "btn btn-success" %>
+      <%= link_to "拠点情報の追加", new_office_path, class: "btn btn-success" %>
       
           
     
