--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -28,7 +28,7 @@
   <%= f.label :指定勤務終了時間, class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :designated_work_end_time, class: "form-control" %>
   
-  <%= f.submit :編集する, class: "btn btn-primary btn-block btn-#{yield(:class_text)}" %>
+  <%= f.submit :編集する, class: "btn btn-primary btn-block btn- active btn-#{yield(:class_text)}" %>
 <% end %>
  
 
