勤怠編集形だけ

--- a/app/views/users/_kintailog.html.erb
+++ b/app/views/users/_kintailog.html.erb
@@ -7,7 +7,57 @@
           </font>
         </span>
         </button>
-      <h1 class="modal-title" , style="text-align:center">勤勉</h1>
+      <h1 class="modal-title" , style="text-align:center">勤勉修正ログ</h1>
+      <div class="modal-body">
+        <table class="apporoved-log-table-header table-bordered table-striped table-condensed">
+          <tbody>
+          <tr>
+            <td>年</td>
+            <td></td>
+          <tr>
+            <td>月</td>
+            <td></td>  
+          </tr>
+          </tr>
+        </table>  
+        </tbody>
+        
+        <table class="apporoved-log-table table-bordered table-striped table-condensed">
+          <thead>
+            <tr>
+              <th>日付</th>
+              <th>変更前出社時間</th>
+              <th>変更前退社時間</th>
+              <th>変更後出社時間</th>
+              <th>変更後退社時間</th>
+              <th>指示者</th>
+              <th>承認者</th>
+            </tr>
+          </thead>
+          
+          <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+          
+          <tbody>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tbody>
+        </table>  
+      </div>  
     </div>
   </div>
 </div>  
