時間CSV見直し

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -76,25 +76,19 @@
             <td><%= link_to "残業申請", edit_overwork_request_user_attendance_path(@user, day), remote: true, class: "btn btn-primary" %></td>
             <td><%= l(day.worked_on, format: :short) %></td>
             <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
-            <td>
-              <% if btn_text = attendance_state(day) %>
-                <%= link_to "#{btn_text}", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
-              <% end %>
-            </td>
-            </td>
             <td><%= day.started_at.strftime('%-H') if day.started_at.present? %></td>
             <td><%= day.started_at.floor_to(15.minutes).strftime('%M') if day.started_at.present? %></td>
             <td>
-              <% if (Date.current == day.worked_on) && day.started_at.nil? %>
-                <%= link_to "出社", user_attendance_path(@user, day), method: :patch, class: "btn btn-default btn-dark form-control" %>
-              <% end %>  
+              <% if attendance_state(day) && day.started_at.blank? %>
+               <%= link_to "出社", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
+              <% end %>
             </td>
-            <td><%= day.finished_at.strftime('%-H') if day.finished_at.present? %></td>
+            </td>
+             <td><%= day.finished_at.strftime('%-H') if day.finished_at.present? %></td>
             <td><%= day.finished_at.floor_to(15.minutes).strftime('%M') if day.finished_at.present? %></td>
-            </td>
             <td>
-              <% if (Date.current == day.worked_on) && day.started_at.present? && day.finished_at.nil? %>
-                <%= link_to "退社", user_attendance_path(@user, day), method: :patch, class: "btn btn-default btn-dark form-control" %>
+              <% if attendance_state(day) && day.started_at.present? &&  day.finished_at.blank? %>
+                <%= link_to "退社", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
               <% end %>  
             </td>
             <td>
