--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,18 @@
     </tr>
   </table>
 </div>
-<div class="btn-users-show">
+<div>
+  [所属長承認のお知らせ]
+</div>
+<div>
+  [勤怠変更お知らせ]
+</div>
+<div>
+  [残業申請のお知らせ]
+</div>
+  
+
+<br><div class="btn-users-show">
 <%= link_to "勤怠を編集", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
 <%= link_to "CSV出力", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
 <br><%= link_to "勤怠修正ログ（承認済）", kintailog_user_path(@user), remote: true, class: "btn btn-success" %></br>
@@ -98,11 +109,11 @@
               <% end %>     
             </td>
             <td><%= day.note %></td>
+            <td><%= day.plan_finished_at %></td>
             <td></td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><%= day.business_processing_contents %></td>
+            <td><%= day.instructor_confirmation %></td>
           </tr>
         <% end %>
       </tbody>
