--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -110,8 +110,8 @@
               <% end %>     
             </td>
             <td><%= day.note %></td>
-            <td><%= l(day.plan_finished_at, format: :time) if day.plan_finished_at.present? %></td>
-            <td></td>
+            <td><%= day.plan_finished_at.strftime('%H')if day.plan_finished_at.present? %></td>
+            <td><%= day.plan_finished_at.strftime('%M')if day.plan_finished_at.present? %></td>
             <td></td>
             <td><%= day.business_processing_contents %></td>
             <td><%= day.instructor_confirmation %></td>
