--- a/app/views/attendances/new_show.html.erb
+++ b/app/views/attendances/new_show.html.erb
@@ -3,15 +3,13 @@
   <table class="table table-bordered table-condensed user-table">
     <tr>
       <td>
-          <%= link_to "⇦ ", user_path(date: @first_day.prev_month), class: "btn btn-info" %>
-        【<%= l(@first_day, format: :middle) %>】時間管理表
-          <%= link_to " ⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
+         
       </td>
       <td>指定勤務開始時間: <%= format_basic_info(@user.designated_work_start_time) %>
       <br>指定勤務終了時間: <%= format_basic_info(@user.designated_work_end_time) %></br>
       </td>
       <td colspan=3>基本時間：<%= format_basic_info(@user.basic_time) %></td>
-      <td>初日：<%= l(@first_day, format: :short) %></td>
+      <td>初日：</td>
     </tr>
 
     <tr>
@@ -20,7 +18,7 @@
       <td>コード: <%= @user.employee_number %></td>
       <td></td>
       <td>出勤日数：<%= @worked_sum %>日</td>
-      <td>締め：<%= l(@last_day, format: :short) %></td>
+      <td>締め：</td>
     </tr>
   </table>
 </div>
@@ -96,9 +94,9 @@
       <tfoot>
          <tr>
           <td></td>
-          <td colspan = "2"><%= format_basic_info(@user.basic_time).to_f*@worked_sum %></td>
+          <td colspan = "2"></td>
           <td colspan = "6"></td>
-          <td><%= format("%.2f", @total_working_times.to_f) %></td>
+          <td></td>
           <td colspan="5"></td>
           <td></td>
           </td>
