--- a/app/views/attendances/_edit_overwork_request.html.erb
+++ b/app/views/attendances/_edit_overwork_request.html.erb
@@ -38,7 +38,7 @@
               <td><%= f.time_field :plan_finished_at, class: "form-control" %></td>  
               <td><%= f.check_box :tomorrow,{}, "true", "false" %></td> 
               <td><%= f.text_field :business_processing_contents, class: "form-control" %></td> 
-              <td><%= f.select :instructor_confirmation,[["選択してください"],["上長A"],["上長B"]] %></td> 
+              <td><%= f.collection_select :instructor_confirmation, @superior, :name, :name %></td> 
             </tr>
           </tbody>
         </table>
