--- a/app/views/attendances/_edit_superior_announcement.html.erb
+++ b/app/views/attendances/_edit_superior_announcement.html.erb
@@ -5,7 +5,8 @@
         <span aria-hidden="true">&times;
         </span>
         </button>
-    <h1 class="modal-title" , style="text-align:center">[<%= @user.name %>からの残業申請]</h1>
+        <% @users.each do |user| %>    
+    <h1 class="modal-title" , style="text-align:center">[<%= user.name %>からの残業申請]</h1>
       <div class="modal-body">
       <!--tableの外にform_withがある場合はtableの外にsubmitを書く-->  
       <%= form_with(model: @user, url: update_superior_announcement_user_attendances_path(@user), method: :patch, local: true) do |f| %>
@@ -49,8 +50,9 @@
               </tbody>
               <% end %>
             <% end %>
-          </table>  
+          </table>
           <%= f.submit "変更を送信する", class: "btn btn-primary" %>
+        <% end %>
         <% end %>
       </div>  
     </div>
